--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "ni"
+name = "bundle"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 anyhow = "1.0.93"
-clap = { version = "4.5.21", features = ["derive", "env"] }
+clap = { version = "4.5.21", features = ["derive", "env", "string"] }
 resolve-path = "0.1.0"
